# ProyectoFinal

./: README.md  main.cpp
ISOMAP/: Dockerfile  README.md  analyze_isomap.py  docker-compose.yml  isomap.cpp  requirements.txt
ISOMAP/ISOMAP/output/: isomap_eps.csv  isomap_knn.csv
ISOMAP/data/: all_aml_train.gct
ISOMAP/output/: isomap_eps.csv  isomap_knn.csv
ISOMAP/src/: main.cpp
Presentacion/: presentacion.md
TMDBAPIapp/: Dockerfile  Graph.cpp  Graph.h  README.md  TMDBAPIUtils.cpp  TMDBAPIUtils.h  docker-compose.yml  main.cpp
TMDBAPIapp/output/: colaboraciones.dot
Tablas/: CMakeLists.txt  README.md  docker-compose.yml
Tablas/docker/: Dockerfile
Tablas/outputs/: diagnostico.txt  incidents.db  incidents.db-shm  incidents.db-wal
Tablas/src/: analytics.cpp  analytics.h  chart.cpp  chart.h  db_loader.cpp  db_loader.h  main.cpp
